# chat-recall-prod

./: .dockerignore  .env.example  .gitignore  .nightshift.json  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_uploads_and_subscriptions.py  003_user_analytics_counters.py  004_subscription_and_retention_columns.py
infra/: alb.tf  autoscaling.tf  ecr.tf  ecs.tf  env.production.example  monitoring.tf  outputs.tf  providers.tf  rds.tf  terraform.tfvars.example  variables.tf  vpc.tf
scripts/: deploy.sh  migrate.sh  setup-ecr.sh
src/chat_recall_prod/: __init__.py  auth.py  config.py  content.py  context.py  models.py  response_models.py  search.py  server.py  threads.py  writer.py
src/chat_recall_prod/db/: __init__.py  pool.py  queries.py
src/chat_recall_prod/importers/: __init__.py  chatgpt.py
tests/: conftest.py  test_auth.py  test_chatgpt_importer.py  test_config.py  test_db.py  test_isolation.py  test_models.py  test_search.py  test_server.py  test_threads.py  test_writer.py
