[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-recall-prod"
version = "0.1.0"
description = "Production MCP server for Chat Recall — Postgres-backed, multi-user"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Eric Magnuson" }]
dependencies = [
    "fastmcp>=2.13.0,<3",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chat_recall_prod"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
